# Kodo-ShelfBot

./: LICENSE  README.md
docs/: _config.yml  index.md
docs/_posts/: 2026-02-15-architecture.md
docs/kodoshelfbot/: CNAME  _config.yml  index.md
docs/kodoshelfbot/_posts/: 2026-02-15-architecture.md
shelfbot_description/: CMakeLists.txt  THIRD_PARTY_NOTICES.md  package.xml
shelfbot_description/config/: robot.yaml
shelfbot_description/config/arm/: visual_parameters.yaml
shelfbot_description/urdf/: robot.urdf.xacro
shelfbot_description/urdf/arm/: universal_robots.urdf.xacro  ur_macro.xacro
shelfbot_description/urdf/base/: a200.urdf.xacro  bumper.urdf.xacro  indoor.urdf.xacro  top_plate.urdf.xacro  wheels.urdf.xacro
shelfbot_description/urdf/gripper/: robotiq_2f_85.urdf.xacro  robotiq_2f_85_macro.urdf.xacro
shelfbot_description/urdf/sensors/: hokuyo_ust.urdf.xacro
shelfbot_gazebo/: README.md  THIRD_PARTY_NOTICES.md  package.xml  setup.cfg  setup.py
shelfbot_gazebo/launch/: gazebo.launch.py  spawn_robot.launch.py
shelfbot_gazebo/worlds/: shelfbot_world.world
