<?xml version="1.0"?>
<package format="3">
  <name>shelfbot_gazebo</name>
  <version>0.0.1</version>
  <description>Simulation environment for Shelfbot in Gazebo (ROS 2 Jazzy + Gazebo Harmonic)</description>

  <maintainer email="kodorobotics@gmail.com">Kodo Robotics</maintainer>

  <license>Apache-2.0</license>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>shelfbot_description</exec_depend>
  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>